tests/ui/generator/issue-64620-yield-array-element.stderr
error[E0627]: yield expression outside of generator literal
  --> $DIR/issue-64620-yield-array-element.rs:6:5
   |
LL |     yield arr[0];
   |     ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0627`.
